Fix[navbar]: Fixed navbar and remove extra margins

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -9,6 +9,7 @@
 
 body {
   background-color: var(--black-white);
+  margin: 0;
 
   .side-and-content-container {
     display: flex;
