--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -1,5 +1,10 @@
 .navigation--container {
   color: var(--venice-blue);
+  width: 100%;
+  position: fixed;
+  background-color: var(--black-white);
+  overflow: hidden;
+  top: 0;
 
   .navigation--div-container {
     margin: 26px 100px;
